Version 2.64:    ( Sat Nov 20 11:47:07 IST 2010 )
-------------------------------------------------

* Fixed https://rt.cpan.org/Ticket/Display.html?id=63177
    - tag-release.pl was installed into lib/Config by EU-MM. Converted the
    Makefile.PL to a wrapper around Build.PL by using Module-Build's
    create_makefile_pl='small' instead of create_makefile_pl='traditional' .

Version 2.63:    ( Fri Nov 19 16:50:58 IST 2010 )
-------------------------------------------------

* Fixed https://rt.cpan.org/Ticket/Display.html?id=63079 by
refactoring/bug-fixing the main module into the _OutputParam method, which
handles the output of multi-line and single-line parameters with all the edge
cases. 
    - The reported problem was that EOT was encountered again in certain cases
    in the output string, and now we make sure the program always avoid it. The
    reappearance of the bug was caused due to duplicate code, which was now
    eliminated.

Version 2.62:     ( Fri Nov 19 15:31:36 IST 2010 )
--------------------------------------------------

* Applied a modified version of Steven Haryanto's commit
ac6ace8bf09fabba4e6ea3b2826ff13cd30507bc :
    - When writing config with fallback section, also omit the fallback 
    section header, like the original file. Also, change
    t/19param-found-outside-section.t a bit to not require IO::Scalar and use 
    File::Temp instead (we are testing WriteConfig anyway).
    - Shlomi Fish fixed unless'es to if's and converted a do { ... } if call to
    a block conditional, as well as made the open statements on t/19param
    more secure.

* Add -nomultiline option.
    -Applied a modified version of Steven Haryanto's commit
    2181f438d40b54c290a2dda5627a244c6e467a7b

Version 2.61:    ( Sun Nov 14 10:52:39 IST 2010 )
-------------------------------------------------

* Correct the opening comment on t/26scalar-filehandle.t to point to the right
bug URL and to include the title of the bug