@@ -12,15 +12,17 @@ use warnings;
 use Test::More;
 
 use Config::IniFiles;
+use File::Spec;
 
-eval "use File::Temp qw(tempfile)";
+eval "use File::Temp qw(tempdir)";
 
 plan skip_all => "File::Temp required for testing" if $@;
 
 plan tests => 7;
 
 {
-    my ($fh, $filename) = tempfile();
+    my $dir_name = tempdir(CLEANUP => 1);
+    my $filename = File::Spec->catfile($dir_name, "foo.ini");
     my $data = join "", <DATA>;
     open F, "> $filename";
     print F $data;
@@ -55,7 +57,7 @@ plan tests => 7;
        "(-fallback) Fallback section catches parameter");
        
     # TEST
-    my ($newfh, $newfilename) = tempfile();
+    my $newfilename = File::Spec->catfile($dir_name, "new.ini");
     my $content;
     $ini->WriteConfig($newfilename);
     {
